--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .byebug_history
+test/dummy/db/*.sqlite3
+test/dummy/db/*.sqlite3-journal
+test/dummy/log/*.log
+test/dummy/tmp/
+test/dummy/config/storage_services.yml
